@@ -2,6 +2,7 @@
 	more keybindings (w/ support for multimedia keys)
 	non-contextual menu on right click outside of lists
 	update docs
+	popup menu with menu key
 
 Future:
 	use threading for album art
